addding in the HW3 framework
